--- a/MyApplication/Components/Pages/FileUpload.razor
+++ b/MyApplication/Components/Pages/FileUpload.razor
@@ -24,6 +24,7 @@
     public string ErrorMessage { get; set; } = "";
 
     public DateTimeOffset LastModified { get; set; }
+    private List<ReaderEvent> listReader = new List<ReaderEvent>();
 
     const int MAX_FILESIZE = 5000 * 1024; // 2 MB
     private void UploadFiles(IBrowserFile file)
@@ -48,33 +49,33 @@
                 ErrorMessage = exception.Message;
             }
     }
-    /*private void UploadFiles(InputFileChangeEventArgs args)
+    
+    class ReaderEvent
     {
-         var browserFile = args.File;
+        private string EVENT_TIME;
+        private string LOCATION;
+        private string READERDESCRIPTION;
+        public string IDHASH;
+        public string DEVID;
+        public string MACHINE;
 
-        if (browserFile != null)
+        public ReaderEvent()
         {
-            FileSize = browserFile.Size;
-            FileType = browserFile.ContentType;
-            FileName = browserFile.Name;
-            LastModified = browserFile.LastModified;
-
-            try
-            {
-                var fileStream = browserFile.OpenReadStream(MAX_FILESIZE);
-
-                var randomFile = Path.GetTempFileName();
-                var extension = Path.GetExtension(browserFile.Name);
-                var targetFilePath = Path.ChangeExtension(randomFile, extension);
-
-                var destinationStream = new FileStream(targetFilePath, FileMode.Create);
-                fileStream.CopyToAsync(destinationStream);
-                destinationStream.Close();
-            }
-            catch (Exception exception)
-            {
-                ErrorMessage = exception.Message;
-            }
+            EVENT_TIME = "";
+            LOCATION = "";
+            READERDESCRIPTION = "";
+            IDHASH = "";
+            DEVID = "";
+            MACHINE = "";
         }
-    }*/
+        public ReaderEvent(string time, string location, string description, string id, string devId, string machine)
+        {
+            EVENT_TIME = time;
+            LOCATION = location;
+            READERDESCRIPTION = description;
+            IDHASH = id;
+            DEVID = devId;
+            MACHINE = machine;
+        }
+    }
 }
